--- a/index.html
+++ b/index.html
@@ -4,11 +4,20 @@
   	  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  	<title>PEP</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  	<title>Hangman</title>
   	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
   </head>
   <body>
+    <style>
+      body{
+        font-family: 'Roboto', sans-serif;
+        color:#aa00ff;
+      }
+
+    </style>
+
     <div id="root" />
     <script src="index.js" />
   </body>
