--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!doctype html>
 <html>
   <head>
-  	  <meta charset="utf-8">
+  <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="robots" content="index, follow">
+  <meta name="REVISIT-AFTER" content="1 MONTH">
+  <meta http-equiv="content-type" content="text/html ; charset=windows-1252">
+  <meta name="keywords" content="hangman, games, gaming, boardgame, play, fun, flash, flashgame, flashgaming, hang-man, hengmann">
+  <meta name="Superfast Hangman game" "="">
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  	<title>Hangman</title>
-  	<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <title>Hangman</title>
   </head>
   <body>
     <style>
@@ -15,9 +19,7 @@
         font-family: 'Roboto', sans-serif;
         color:#aa00ff;
       }
-
     </style>
-
     <div id="root" />
     <script src="index.js" />
   </body>
