--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
   <meta charset="utf-8">
+  <meta name="google-site-verification" content="NcDY1zrHFydNo7LHnqHv2AxUFiv8aHeZugt8_KW0Ng0" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="robots" content="index, follow">
@@ -18,7 +19,11 @@
       body{
         font-family: 'Roboto', sans-serif;
         color:#aa00ff;
-      }
+
+        }
+        a, a:visited, a:hover, a:active {
+          color: inherit;
+        }
     </style>
     <div id="root" />
     <script src="index.js" />
