upgrade game tab styling

--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
         a, a:visited, a:hover, a:active {
           color: inherit;
         }
+
+        body{
+          -webkit-touch-callout: none;
+          -webkit-user-select: none;
+          -khtml-user-select: none;
+          -moz-user-select: none;
+          -ms-user-select: none;
+          user-select: none;
+          -webkit-tap-highlight-color: transparent
+        }
+        :focus {
+          outline: none !important;
+        }
     </style>
     <div id="root" />
     <script src="index.js" />
