update word lists

--- a/index.html
+++ b/index.html
@@ -1,34 +1,73 @@
 <!doctype html>
-<html>
+<html lang="en">
   <head>
   <meta charset="utf-8">
-  <meta name="google-site-verification" content="NcDY1zrHFydNo7LHnqHv2AxUFiv8aHeZugt8_KW0Ng0" />
-
+  <meta name="google-site-verification" content="NcDY1zrHFydNo7LHnqHv2AxUFiv8aHeZugt8_KW0Ng0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="viewport" content="width=device-width, minimum-scale=1 initial-scale=1.0">
+  <meta name="theme-color" content="#aa00ff"/>
+  <script type="application/ld+json">
+
+  {
+    "@context": "http://schema.org",
+    "@type": "SoftwareApplication",
+    "name": "Hangman",
+    "operatingSystem": "ANDROID, IOS, PC",
+    "applicationCategory": "http://schema.org/GameApplication",
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.6",
+      "ratingCount": "8864"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "review": {
+      "@type": "Review",
+      "reviewRating": {
+        "@type": "Rating",
+        "ratingValue": "4",
+        "bestRating": "5"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Bob Hamilton"
+      },
+      "datePublished": "2018-05-01",
+      "reviewBody": "This games was easy to use!",
+      "publisher": "JasonAllshorn.com"
+    }
+  }
+  </script>
   <meta name="robots" content="index, follow">
   <meta name="REVISIT-AFTER" content="1 MONTH">
   <meta http-equiv="content-type" content="text/html ; charset=windows-1252">
   <meta name="keywords" content="hangman, games, gaming, boardgame, play, fun, flash, flashgame, flashgaming, hang-man, hengmann">
   <meta name="Superfast Hangman game" "="">
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-
-
-
-  
+  <meta name="Description" content="News agrigated from around the web. Just the top 10 news articles.">
+  <link rel="canonical" href="https://hangman.education">
   <title>Hangman</title>
-  </head>
   <body>
+    <noscript>
+    <h1>Hi there! Sorry to say this page doesn't work without Javascript being turned on</h1>
+    </noscript>
     <style>
+        @font-face {
+          font-family: 'Roboto';
+          font-display: auto;
+          src: local('Roboto'), url(https://fonts.gstatic.com/s/arvo/v9/rC7kKhY-eUDY-ucISTIf5PesZW2xOQ-xsNqO47m55DA.woff2) format('woff2');
+        }
       body{
-        font-family: 'Roboto', sans-serif;
         color:#aa00ff;
-
         }
         a, a:visited, a:hover, a:active {
           color: inherit;
         }
+
+
 
         body{
           -webkit-touch-callout: none;
@@ -43,7 +82,7 @@
           outline: none !important;
         }
     </style>
-    <div id="root" />
-    <script src="index.js" />
+    <div id="root">
+    <script src="index.js"></script>
   </body>
-</html>
+</html></script></div></body></html>
