--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!doctype html>
 <html lang="en">
   <head>
+      <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-126733657-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-126733657-1');
+  </script>
   <meta charset="utf-8">
   <meta name="google-site-verification" content="NcDY1zrHFydNo7LHnqHv2AxUFiv8aHeZugt8_KW0Ng0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
